# attendance-system

./: .env.sample  .env.test  .prettierrc.js  LICENSE  Makefile  README.md  docker-compose.backend-test.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: app.py  config.py  container.py  database.py  driver.py  hello.py  main.py  router.py  routes.py  run.py
backend/src/apis/: helloWorld.py  hoge.py  login.py  user.py  user_list.py
backend/src/applications/: error.py  response.py
backend/src/applications/body/: error.py  response.py
backend/src/applications/services/: login_application_service.py  user_application_service.py
backend/src/applications/session/: create_session_request.py  create_session_response.py  get_session_request.py  get_session_response.py  session_application_service.py
backend/src/applications/user/: create_user_request.py  create_user_response.py  get_user_request.py  get_user_response.py  update_user_request.py  update_user_response.py  user_application_service.py
backend/src/configs/: app_config.py  config.py  database_config.py
backend/src/domains/models/: __init__.py  (+3 more)
backend/src/infrastructures/: database.py
backend/src/interfaces/: login.py  router.py
backend/src/libraries/: builder.py
backend/src/models/: __init__.py  cookie.py  hoge.py  session_model.py  user.py  user_model.py
backend/src/repositories/: session_repository.py  user_repository.py
backend/src/services/: login_service.py  session_service.py  user_service.py
backend/src/tests/: main_test_case.py  test_case_impl.py
(+76 files in other folders)
