[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Seina Tohyama <tiara818seina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.0"
autopep8 = "^1.5.7"
python-dotenv = "^0.17.1"
Flask-Cors = "^3.0.10"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
